--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Commitment!</h1>
-    </header>
+    <h1>Colors and Shapes</h1>
+    </header> 
   </body>
 </html>
