Create Div Container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
   <header>
     <h1>Colors and Shapes</h1>
-    </header> 
+    </header>
+
+    <div class= "container"></div> 
   </body>
 </html>
