--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Colors and Shapes</h1>
     </header>
 
-    <div class= "container"></div> 
+    <div class= "container">
+        <div class = "square"></div> 
+    </div>
   </body>
 </html>
