--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </header>
 
     <div class= "container">
-        <div class = "square"></div> 
+        <div class = "square"></div>
+        <div class = "square1"></div> 
     </div>
   </body>
 </html>
