--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class = "square5"></div>
         <div class = "square6"></div>
         <div class = "square7"></div>
+        <div class = "square8"></div>
     </div>
 
 
