Add another sqaure class

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class = "square6"></div>
         <div class = "square7"></div>
         <div class = "square8"></div>
+        <div class = "square9"></div>
     </div>
 
 
