--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class = "square7"></div>
         <div class = "square8"></div>
         <div class = "square9"></div>
+        <div class = "square9"></div>
     </div>
 
 
