--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div class = "square9"></div>
         <div class = "square10"></div>
         <div class = "square11"></div>
+        <div class = "square12"></div>
+
 
     </div>
 
