Add another square

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <div class = "square10"></div>
         <div class = "square11"></div>
         <div class = "square12"></div>
+        <div class = "square13"></div>
+
 
 
     </div>
