--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset ="UTF-8">
   <title>Commitment</title>
     <link href="css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rampart+One&display=swap" rel="stylesheet"
 </head>
 <body>
   <header>
