--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Colors and Shapes</h1>
+    <h1>Color Blocks</h1>
     </header>
 
     <div class= "container">
