--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class = "square11"></div>
         <div class = "square12"></div>
         <div class = "square13"></div>
+        <div class = "squareA"></div>
       </div>
 
 
