--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class = "square12"></div>
         <div class = "square13"></div>
         <div class = "squareA"></div>
+        <div class = "squareB"></div>
       </div>
 
 
