--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class = "square13"></div>
         <div class = "squareA"></div>
         <div class = "squareB"></div>
+        <div class = "squareC"></div>
       </div>
 
 
